# cpp_mlp_lib

./: CMakeLists.txt  main.cpp
CSharpLib/LibCsharp/: LibCsharp.sln
CSharpLib/LibCsharp/ConsoleTest/: ConsoleTest.csproj  Program.cs
CSharpLib/LibCsharp/ML/: NNModel.cs
NNLib/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h
